tests/fixtures/errors/e0303_enum_in_repeat.mimz
// expect: E0303
module M {
  out y: bits[4]
  repeat i: 0..4 {
    enum E { A }
    y[i] = 0
  }
}
